--- a/GameStore.Unit/GameStore.Unit.csproj
+++ b/GameStore.Unit/GameStore.Unit.csproj
@@ -88,7 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
